--- a/README.adoc
+++ b/README.adoc
@@ -84,7 +84,7 @@ cf push
 |number of elements per batch processing
 |`50`
 
-|`discogs.file-url-template`
+|`file-url-template`
 |Discogs Masters database URI template
 |https://discogs-data.s3-us-west-2.amazonaws.com/data/2018/discogs_20181001_{entity}.xml.gz
 
