--- a/README.adoc
+++ b/README.adoc
@@ -58,90 +58,99 @@ cf push
 
 .Available configuration properties
 |===
-|Property |Description |Default
+|Property |Description
 
 |`spring.redis.host`
 |Redis database hostname
-|`localhost`
 
 |`spring.redis.port`
 |Redis database port
-|`6379`
 
 |`image-delay`
 |Duration in milliseconds to sleep before getting an image from Discogs API (useful to demonstrate  caching)
-|`100`
 
 |`search-results-limit`
 |Maximum number of results for searches (`LIMIT` argument in `FT.SEARCH`)
-|`20`
 
 |`spring.cache.cache-names`
 |Caches to be created on startup
-|`images`
 
 |`spring.cache.redis.time-to-live`
 |duration in milliseconds
-|`600000`
 
-|`redisearch-host`
+|`spring.redisearch.host`
 |RediSearch database hostname
-|`localhost`
 
-|`redisearch-port`
+|`spring.redisearch.port`
 |RediSearch database port
-|`6379`
 
 |`discogs.data.master-index`
 |Name of the master index
-|`masterIdx`
 
 |`discogs.data.artist-suggestion-index`
 |Name of the artist suggestion index
-|`artistSuggestIdx`
 
 |`discogs.data.url`
 |Discogs Masters database URI template
-|https://discogs-data.s3-us-west-2.amazonaws.com/data/2018/discogs_20181001_{entity}.xml.gz
 
 |`discogs.data.batch-size`
 |number of elements per batch processing
-|`50`
 
 |`discogs.data.skip`
 |skip loading of Discogs data file
-|`false`
 
 |`discogs.data.no-op`
 |Disables all writes to Redis (only read the data file). Useful for performance testing
-|`false`
 
 |`discogs.api.url`
 |URL for Discogs API masters endpoint
-|`https://api.discogs.com/masters/{id}`
 
 |`discogs.api.token`
 |Your Discogs API token
-|`wI...qz`
 
 |`discogs.api.user-agent`
 |User agent to use for Discogs API calls
-|`com.redislabs.rediscogs.useragent`
 
 |`spring.task.execution.pool.core-size`
 |Number of threads to use for data loading jobs
-|`1`
 
 |`spring.redis.jedis.pool.max-active`
 |Maximum number of connections that can be allocated by the Jedis pool
-|`1`
+|===
+
+== Data Model
+=== Master
+Each master release (i.e. album) is stored as a RediSearch document under the `masters` index with the following fields:
+|===
+|Field Name|Type
+
+|artist
+|`text`
+
+|artistId
+|`text`
+
+|dataQuality
+|`text`
+
+|genres
+|`text`
+
+|styles
+|`text`
+
+|title
+|`text`
+
+|year
+|`numeric`
 |===
 
 == Demo Steps
 === Redis CLI
 . Show number of keys in Redis: `info`
-. Run simple keyword search: `FT.SEARCH masterIdx spring`
-. Run prefix search: `FT.SEARCH masterIdx spring*`
+. Run simple keyword search: `FT.SEARCH masters spring`
+. Run prefix search: `FT.SEARCH masters spring*`
 
 === Web UI
 . Open http://localhost:8080
