--- a/README.adoc
+++ b/README.adoc
@@ -19,7 +19,7 @@ ifdef::env-github[]
 :important-caption: :heavy_exclamation_mark:
 :caution-caption: :fire:
 :warning-caption: :warning:
-endif::[]
+endif::env-github[]
 
 Redis demo based on data from https://data.discogs.com[discogs.com].
 
